--- a/apps/smallapp/perfect-plan-for-4-days/index.html
+++ b/apps/smallapp/perfect-plan-for-4-days/index.html
@@ -17,7 +17,7 @@ if(nd>rd){
 if(localStorage.perfectplanfor4days==null||localStorage.perfectplanfor4days==undefined) {location.href="start.html"} else
 if(localStorage.perfectplanfor4days){location.href=localStorage.perfectplanfor4days} else document.write("抱歉,出现了一点小问题...<a href='0.html'>重新开始</a>")
  } else {
-vad xco=(function(){
+var xco=(function(){
 var timeDiff = rd - nd
 var xch = Math.floor(timeDiff / 3600);
 timeDiff = timeDiff % 3600;
