--- a/apps/smallapp/perfect-plan-for-4-days/index.html
+++ b/apps/smallapp/perfect-plan-for-4-days/index.html
@@ -24,7 +24,7 @@ timeDiff = timeDiff % 3600;
 var xcm = Math.floor(timeDiff / 60);
 timeDiff = timeDiff % 60;
 var xcs = timeDiff;
-return {xch:xch;xcm:xcm;xcs:xcs}
+return {xch:xch,xcm:xcm,xcs:xcs}
 })()
 var xc=xco.xch+"时"+xco.xcm+"分"+xco.xcs+"秒"
 document.write("<h1 style='text-align:center;'>403:访问被拒绝</h1>")
