--- a/apps/smallapp/perfect-plan-for-4-days/clear.html
+++ b/apps/smallapp/perfect-plan-for-4-days/clear.html
@@ -4,5 +4,6 @@ delete localStorage.perfectplanfor4daysday1
 delete localStorage.perfectplanfor4daysday2
 delete localStorage.perfectplanfor4daysday3
 delete localStorage.perfectplanfor4daysday4
+delete localStorage.perfectplanfor4daysday
 location.href="index.html"
 </script>
