--- a/apps/smallapp/perfect-plan-for-4-days/403.html
+++ b/apps/smallapp/perfect-plan-for-4-days/403.html
@@ -2,6 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=gb2312">
 <title>403 - 禁止访问: 访问被拒绝。</title>
+<script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
 <style type="text/css">
 body{margin:0;font-size:.7em;font-family:Verdana, Arial, Helvetica, sans-serif;background:#EEEEEE;}
 fieldset{padding:0 15px 10px 15px;} 
@@ -24,5 +25,9 @@ background-color:#555555;}
 </div>
  
  
+
+<script>
+
+</script>
 </body>
 </html>
