--- a/apps/smallapp/perfect-plan-for-4-days/index.html
+++ b/apps/smallapp/perfect-plan-for-4-days/index.html
@@ -31,7 +31,7 @@ w.document.open()
 w.alert("请"+xc+"后再试")
 w.document.close()
 w.close()
-location.href="403";
+location.href="403jt?o=t";
 /*+encodeURIComponent(xc)*/
  }
 }
