--- a/apps/smallapp/perfect-plan-for-4-days/403jt.html
+++ b/apps/smallapp/perfect-plan-for-4-days/403jt.html
@@ -28,7 +28,35 @@ background-color:#555555;}
  
 
 <script>
-if(getUrlValue("o")==null) location.href="index.html"
+function setCookie(cname, cvalue, exdays) {
+    var d = new Date();
+    d.setTime(d.getTime() + (exdays * 1000));
+    var expires = "expires="+d.toUTCString();
+    document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+}
+function getCookie(cname) {
+    var name = cname + "=";
+    var ca = document.cookie.split(';');
+    for(var i = 0; i < ca.length; i++) {
+        var c = ca[i];
+        while (c.charAt(0) == ' ') {
+            c = c.substring(1);
+         }
+        if (c.indexOf(name)  == 0) {
+            return c.substring(name.length, c.length);
+         }
+    }
+    return "";
+}
+
+if(getUrlValue("o")==null) {
+if(getCookie("bopen")==""){
+location.href="index.html"
+}
+} else {
+setCookie("bopen",true,10)
+location.href="403jt"
+}
 </script>
 </body>
 </html>
