--- a/apps/smallapp/perfect-plan-for-4-days/403jt.html
+++ b/apps/smallapp/perfect-plan-for-4-days/403jt.html
@@ -52,6 +52,8 @@ function getCookie(cname) {
 if(getUrlValue("o")==null) {
 if(getCookie("bopen")==""){
 location.href="index.html"
+} else {
+setCookie("bopen","",10)
 }
 } else {
 setCookie("bopen",true,10)
