--- a/apps/smallapp/perfect-plan-for-4-days/3.html
+++ b/apps/smallapp/perfect-plan-for-4-days/3.html
@@ -36,20 +36,20 @@ alert("恭喜!您成功瘦身超过了20斤,训练目标已经达到!")
 location.href="end.html"
  } else {
 localStorage.perfectplanfor4days="3.1"
+ }
+}
 
+function checkEnd(){
 var d=new Date()
 function checkHad0(inp){
 if(inp<10||String(inp).length<2) return "0"+inp;
 return inp;
 }
+d.setDate(d.getDate() + 1)
 localStorage.perfectplanfor4daysday=d.getFullYear()+"-"+checkHad0(d.getMonth()+1)+"-"+checkHad0(d.getDate())+
 "T"+checkHad0(d.getHours())+":"+checkHad0(d.getMinutes())+":"+checkHad0(d.getSeconds())+"+08:00"
+localStorage.perfectplanfor4days="3?question=true"
 location.href="index.html"
- }
-}
-
-function checkEnd(){
-location.href+="?question=true"
 }
 
 (function(){
