--- a/apps/smallapp/perfect-plan-for-4-days/0.html
+++ b/apps/smallapp/perfect-plan-for-4-days/0.html
@@ -9,4 +9,4 @@
 4.请不要作弊!!!<br>
 5.如果对此方案不满意,那就别用了,谁让你自己点进来的?!<br>
 </code><p><button type=button onclick="closewin()//window.opener=null;window.open('','_self');window.close();">算了,我意志薄弱</button><button type=submit>我要试试!</button></p></form>
-<script>function closewin(){w=window.open("/msg/404","_self");w.opener.close()}</script>
+<script>function closewin(){w=window.open("/msg/404","_self");w.close()}</script>
