--- a/apps/smallapp/calc/bilibili-join-time/c/inp.html
+++ b/apps/smallapp/calc/bilibili-join-time/c/inp.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8">
+<script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
 <title>bilibili入坑时间计算器</title>
 </head>
 <body>
