--- a/apps/smallapp/calc/bilibili-join-time/c/inp.html
+++ b/apps/smallapp/calc/bilibili-join-time/c/inp.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=yes">
 <script src="https://shc7432.github.io/public/getLinkInput/getLinkInput.js"></script>
-<title>bilibili入坑时间计算器</title>
+<title>Bilibili入坑时间计算器</title>
 </head>
 <body>
 
