--- a/user-center/new/index.html
+++ b/user-center/new/index.html
@@ -3,7 +3,7 @@
 <head> 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>阿婆猪女装记录</title>
+  <title>注册账号</title>
   <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
   <link rel="stylesheet" href="//resources/demos/style.css">
   <style>
@@ -79,7 +79,7 @@ $( function() {
       }
     });
     $( "#diaok" ).dialog({
-      autoOpen: false
+      autoOpen: false,
       buttons: {
         "完成": function() {
           $( this ).dialog( "close" );
