--- a/user-center/new/index.html
+++ b/user-center/new/index.html
@@ -36,7 +36,7 @@
 <button type=submit>马上注册!</button>
 </pre></form>
 
-<script>
+<script id=spt1 type="test/javascript">
 frm.onsubmit=function(event){
   event.preventDefault();
   if(username.value!=""&&password.value!=""){
@@ -88,6 +88,14 @@ $( function() {
         } 
     });
   } );
+</script>
+<script>
+try{
+eval(spt1.innerHTML)
+}
+catch(err){
+alert(err)
+}
 </script>
  
 <div id="diac" title="注册失败">
