--- a/user-center/new/index.html
+++ b/user-center/new/index.html
@@ -44,7 +44,7 @@ var uunme=localStorage.unme.split(",")
 var i,out1=false
 if(uunme!=""&&uunme!=null){
 for(i=0;i<uunme.length;i++){
-out1=out1||(unme==uunme[i])
+out1=out1||(username==uunme[i])
 }
 }
 if(!out1){
