--- a/user-center/new/index.html
+++ b/user-center/new/index.html
@@ -40,12 +40,16 @@
 frm.onsubmit=function(event){
   event.preventDefault();
   if(username.value!=""&&password.value!=""){
+
+if(localStorage.unme!=""&&localStorage.unme!=null){
 var uunme=localStorage.unme.split(",")
 var i,out1=false
 if(uunme!=""&&uunme!=null){
 for(i=0;i<uunme.length;i++){
 out1=out1||(username==uunme[i])
-}
+  }
+} else var out1=false
+
 }
 if(!out1){
       localStorage.unme+=username.value+",";
@@ -58,6 +62,7 @@ if(!out1){
       $( "#diac" ).dialog( "open" );
   }
 }  
+
 $( function() {
 
     $( "#diac" ).dialog({
