--- a/user-center/new/index.html
+++ b/user-center/new/index.html
@@ -30,9 +30,9 @@
 
 <form id=frm>
 <pre>账号
-<input type=text id=username maxlength=15 required>
+<input type=text id=username maxlength=15>
 密码
-<input type=text id=password required maxlength=25>
+<input type=text id=password maxlength=25>
 <button type=submit>马上注册!</button>
 </pre></form>
 
