--- a/user-center/new/index.html
+++ b/user-center/new/index.html
@@ -28,16 +28,20 @@
 
 <h2>准备好注册账号了吗?现在就开始吧!</h2>
 
+<p onclick='$( "#newuser" ).dialog( "open" );'>点我即可注册</p>
+
+<div id="newuser" title="注册账号">
 <form id=frm>
 <pre>账号
 <input type=text id=username maxlength=15>
 密码
 <input type=text id=password maxlength=25>
-<button type=submit>马上注册!</button>
-</pre></form>
+<!--<button type=submit>马上注册!</button>-->
+</pre></form></div>
 
 <script id=srt1 type="test/javascript">
-frm.onsubmit=function(event){
+frm.onsubmit=usernew
+function usernew(event){
   event.preventDefault();
   if(username.value!=""&&password.value!=""){
 
@@ -69,15 +73,32 @@ if(!out1){
 
 $( function() {
 
+    $( "#newuser" ).dialog({
+      autoOpen: false,
+      buttons: {
+        "注册": function() {
+          usernew()
+          $( "#diac" ).dialog( "close" );
+        },
+        "取消": function() {
+          $( "#diac" ).dialog( "close" );
+        }
+      },
+      close: function() {
+        frm.reset()
+        return false;
+      }
+    });
     $( "#diac" ).dialog({
       autoOpen: false,
       buttons: {
         "知道了": function() {
           $( "#diac" ).dialog( "close" );
-        },
+        }
+      },
       close: function() {
+        $( "#newuser" ).dialog( "open" );
         return false;
-      }
       }
     });
     $( "#diah" ).dialog({
@@ -88,11 +109,12 @@ $( function() {
         } ,
         "好吧": function() {
           $( "#diah" ).dialog( "close" );
-        },
+        }
+      },
       close: function() {
         username.value=""
+        $( "#newuser" ).dialog( "open" );
         return false;
-      }
       }
     });
     $( "#diaok" ).dialog({
@@ -101,6 +123,10 @@ $( function() {
         "完成": function() {
           $( "#diaok" ).dialog( "close" );
         } 
+      },
+      close: function() {
+        $( "#newuser" ).dialog( "open" );
+        return false;
       }
     });
 
