--- a/user-center/new/index.html
+++ b/user-center/new/index.html
@@ -10,7 +10,6 @@
     label, input { display:block; }
     input.text { margin-bottom:12px; width:95%; padding: .4em; }
     fieldset { padding:0; border:0; margin-top:25px; }
-    h1 { font-size: 1.2em; margin: .6em 0; }
     div#users-contain { width: 350px; margin: 20px 0; }
     div#users-contain table { margin: 1em 0; border-collapse: collapse; width: 100%; }
     div#users-contain table td, div#users-contain table th { border: 1px solid #eee; padding: .6em 10px; text-align: left; }
@@ -31,13 +30,14 @@
 <p onclick='$( "#newuser" ).dialog( "open" );'>点我即可注册</p>
 
 <div id="newuser" title="注册账号">
+<fieldset>
 <form id=frm>
 <pre>账号
-<input type=text id=username maxlength=15>
+<input type=text class=text id=username maxlength=15>
 密码
-<input type=text id=password maxlength=25>
+<input type=text class=text id=password maxlength=25>
 <!--<button type=submit>马上注册!</button>-->
-</pre></form></div>
+</pre></form></fieldset></div>
 
 <script id=srt1 type="test/javascript">
 frm.onsubmit=usernew
@@ -78,10 +78,10 @@ $( function() {
       buttons: {
         "注册": function() {
           usernew()
-          $( "#diac" ).dialog( "close" );
+          $( "#newuser" ).dialog( "close" );
         },
         "取消": function() {
-          $( "#diac" ).dialog( "close" );
+          $( "#newuser" ).dialog( "close" );
         }
       },
       close: function() {
