--- a/user-center/new/index.html
+++ b/user-center/new/index.html
@@ -75,6 +75,7 @@ $( function() {
 
     $( "#newuser" ).dialog({
       autoOpen: false,
+      modal: true,
       buttons: {
         "注册": function() {
           usernew()
