--- a/user-center/new/index.html
+++ b/user-center/new/index.html
@@ -104,6 +104,7 @@ $( function() {
     });
     $( "#diah" ).dialog({
       autoOpen: false,
+      modal: true,
       buttons: {
         "好的": function() {
           $( "#diah" ).dialog( "close" );  
@@ -120,6 +121,7 @@ $( function() {
     });
     $( "#diaok" ).dialog({
       autoOpen: false,
+      modal: true,
       buttons: {
         "完成": function() {
           $( "#diaok" ).dialog( "close" );
