--- a/user-center/new/index.html
+++ b/user-center/new/index.html
@@ -33,9 +33,9 @@
 <fieldset>
 <form id=frm>
 <pre>账号
-<input type=text class=text id=username maxlength=15>
+<input type=text class="text ui-widget-content ui-corner-all" id=username maxlength=15>
 密码
-<input type=text class=text id=password maxlength=25>
+<input type=text class="text ui-widget-content ui-corner-all" id=password maxlength=25>
 <!--<button type=submit>马上注册!</button>-->
 </pre></form></fieldset></div>
 
