--- a/user-center/new/index.html
+++ b/user-center/new/index.html
@@ -32,12 +32,12 @@
 <div id="newuser" title="注册账号">
 <fieldset>
 <form id=frm>
-<pre>账号
-<input type=text class="text ui-widget-content ui-corner-all" id=username maxlength=15>
-密码
-<input type=text class="text ui-widget-content ui-corner-all" id=password maxlength=25>
+账号<br>
+<input type=text class="text ui-widget-content ui-corner-all" id=username maxlength=15><br>
+密码<br>
+<input type=text class="text ui-widget-content ui-corner-all" id=password maxlength=25><br>
 <!--<button type=submit>马上注册!</button>-->
-</pre></form></fieldset></div>
+</form></fieldset></div>
 
 <script id=srt1 type="test/javascript">
 frm.onsubmit=usernew
