--- a/user-center/new/index.html
+++ b/user-center/new/index.html
@@ -128,7 +128,7 @@ $( function() {
         } 
       },
       close: function() {
-        $( "#newuser" ).dialog( "open" );
+        $( "#newuser" ).dialog( "close" );
         return false;
       }
     });
