--- a/user-center/new/index.html
+++ b/user-center/new/index.html
@@ -108,6 +108,7 @@ $( function() {
     });
     $( "#diac" ).dialog({
       autoOpen: false,
+      modal: true,
       buttons: {
         "知道了": function() {
           $( "#diac" ).dialog( "close" );
