--- a/user-center/new/index.html
+++ b/user-center/new/index.html
@@ -29,6 +29,8 @@
 
 <p onclick='$( "#newuser" ).dialog( "open" );'>点我即可注册</p>
 
+<p hidden>返回<span></span></p>
+
 <div id="newuser" title="注册账号">
 <fieldset>
 <form id=frm>
