--- a/user-center/new/index.html
+++ b/user-center/new/index.html
@@ -29,7 +29,7 @@
 
 <p onclick='$( "#newuser" ).dialog( "open" );'>点我即可注册</p>
 
-<p hidden>返回<span></span></p>
+<p hidden class="returnbutton">返回<span></span></p>
 
 <div id="newuser" title="注册账号">
 <fieldset>
@@ -42,6 +42,12 @@
 </form></fieldset></div>
 
 <script id=srt1 type="test/javascript">
+if(getUrlValue('returnto')){
+document.querySelectorAll(".returnbutton")[0].hidden=0
+document.querySelectorAll(".returnbutton")[0].querySelectorAll("span")[0].innerHTML=decodeURIComponent(getUrlValue("returnto"))
+document.querySelectorAll(".returnbutton")[0].onclick=function(){location.href=decodeURIComponent(getUrlValue("returnto"))}
+}
+
 frm.onsubmit=usernew
 function usernew(event){
   if(event!=undefined) event.preventDefault();
