--- a/user-center/signin/index.html
+++ b/user-center/signin/index.html
@@ -16,7 +16,7 @@
 
 <h1>登录</h1>
 
-<form action="" onsubmit="login();return false;">
+<form action="" onsubmit="logi();return false;">
       <span id="lotmsg"></span><label for="user">账号</label>
       <input type="text" name="name" id="user" value="" class="text ui-widget-content ui-corner-all">
       <label for="pw">密码</label>
