--- a/user-center/signin/index.html
+++ b/user-center/signin/index.html
@@ -19,9 +19,9 @@
 <form action="" onsubmit="logi();return false;">
       <span id="lotmsg"></span><label for="user">账号</label>
       <input type="text" name="name" id="user" value="" class="text ui-widget-content ui-corner-all">
-      <label for="pw">密码</label>
+      <br><label for="pw">密码</label>
       <input type="text" name="email" id="pw" value="" class="text ui-widget-content ui-corner-all">
-<input type=submit>
+<br><input type=submit value=确定>
 </form>
 
 <script>
