--- a/apps/smallapp/perfect-plan-for-4-days/3.html
+++ b/apps/smallapp/perfect-plan-for-4-days/3.html
@@ -70,7 +70,7 @@ dialog1()
   } );
 
 function dialog1(){
-    $( "#dialog" ).dialog( "open" );
+    $( "#dialog-confirm" ).dialog( "open" );
 }
 
 function checkEnd(){
