--- a/apps/smallapp/perfect-plan-for-4-days/3.html
+++ b/apps/smallapp/perfect-plan-for-4-days/3.html
@@ -36,17 +36,6 @@
 </div>
 
 <script>
-
-window.addEventListened("load",function(){
-function win(){
-alert("恭喜!您成功瘦身超过了20斤,训练目标已经达到!")
-location.href="end.html"
-}
-function nowin(){
-localStorage.perfectplanfor4days="3.1"
-location.href="index.html"
-}
-
   $( function() {
     $( "#dialog-confirm" ).dialog({
       autoOpen: false,
@@ -63,6 +52,18 @@ location.href="index.html"
       }
     });
   } );
+</script>
+<script>
+
+window.addEventListened("load",function(){
+function win(){
+alert("恭喜!您成功瘦身超过了20斤,训练目标已经达到!")
+location.href="end.html"
+}
+function nowin(){
+localStorage.perfectplanfor4days="3.1"
+location.href="index.html"
+}
 
 function dialog1(){
     $( "#dialog-confirm" ).dialog( "open" );
