--- a/user-center/signin/index.html
+++ b/user-center/signin/index.html
@@ -21,7 +21,7 @@
       <input type="text" name="name" id="user" value="" class="text ui-widget-content ui-corner-all">
       <br><label for="pw">密码</label>
       <input type="text" name="email" id="pw" value="" class="text ui-widget-content ui-corner-all">
-<br><input type=button class="login" value=确定>
+<br><input type=submit class="login" value=确定>
 </form>
 
 <script>
