--- a/user-center/signin/index.html
+++ b/user-center/signin/index.html
@@ -56,6 +56,7 @@ if(out1&&out2){
 lotmsg.innerHTML="登录成功!<br>"
 uname.value=user.value
 window.unmev=user.value
+setCookie("signin",user.value,60)
 setTimeout(function(){lin.dialog( "close" );document.getElementById("login").hidden=true;},2000)
 } else {
 lotmsg.innerHTML="账号或密码错误<br>"
