--- a/user-center/signin/index.html
+++ b/user-center/signin/index.html
@@ -48,16 +48,15 @@ var pwnme=localStorage.pwme.split(",")
 var i,out1=false,out2=false
 for(i=0;i<uunme.length;i++){
 out1=out1||(unme==uunme[i])
+out1i=i
 }
 for(i=0;i<pwnme.length;i++){
 out2=out2||(pwme==pwnme[i])
+out2i=i
 }
-if(out1&&out2){
+if(out1&&out2&&(out1i==out2i)){
 lotmsg.innerHTML="登录成功!<br>"
-uname.value=user.value
-window.unmev=user.value
 setCookie("signin",user.value,60)
-setTimeout(function(){lin.dialog( "close" );document.getElementById("login").hidden=true;},2000)
 } else {
 lotmsg.innerHTML="账号或密码错误<br>"
 setTimeout("lotmsg.innerHTML=''",1500)
