--- a/user-center/signin/index.html
+++ b/user-center/signin/index.html
@@ -55,7 +55,7 @@ out2=out2||(pwme==pwnme[i])
 out2i=i
 }
 if(out1&&out2&&(out1i==out2i)){
-lotmsg.innerHTML="登录成功!账号是"+setCookie("signin",$("#user").val(),120)+"<br>"
+lotmsg.innerHTML="登录成功!账号"+setCookie("signin",$("#user").val(),120)+"<br>"
 } else {
 lotmsg.innerHTML="账号或密码错误<br>"
 setTimeout("lotmsg.innerHTML=''",1500)
