--- a/user-center/signin/index.html
+++ b/user-center/signin/index.html
@@ -18,9 +18,9 @@
 
 <form id=frm1 method=post action="">
       <span id="lotmsg"></span><label for="user">账号</label>
-      <input type="text" name="name" id="user" value="" class="text ui-widget-content ui-corner-all">
+      <input type="text" name="name" id="user" value="" style="width:90px;height:30px;">
       <br><label for="pw">密码</label>
-      <input type="text" name="email" id="pw" value="" class="text ui-widget-content ui-corner-all">
+      <input type="text" name="email" id="pw" value="" style="width:90px;height:30px;">
 <br><button type=submit class="login">确定</button>
 </form>
 
@@ -55,7 +55,7 @@ out2=out2||(pwme==pwnme[i])
 out2i=i
 }
 if(out1&&out2&&(out1i==out2i)){
-lotmsg.innerHTML="登录成功!账号"+setCookie("signin",$("#user").val(),120)+"<br>"
+lotmsg.innerHTML="登录成功!账号"+setCookie("signin",unme,120)+"<br>"
 } else {
 lotmsg.innerHTML="账号或密码错误<br>"
 setTimeout("lotmsg.innerHTML=''",1500)
