--- a/user-center/my-data/add-pw/cannot-reset/index.html
+++ b/user-center/my-data/add-pw/cannot-reset/index.html
@@ -19,8 +19,8 @@
   <option value ="sha1">SHA1</option>
   <option value="sha5">SHA1(SHA1(SHA1(SHA1(SHA1(string)))))</option>
 </select><br>
-要加密的文字<textarea id=txt1 cols=50 rows=5 placeholder=输入文字></textarea><br>
-加密结果<textarea id=txt2 cols=50 rows=5 placeholder=加密结果 readonly></textarea><br>
+要加密的文字<br><textarea id=txt1 cols=50 rows=5 placeholder=输入文字></textarea><br>
+加密结果<br><textarea id=txt2 cols=50 rows=5 placeholder=加密结果 readonly></textarea><br>
 <button type=button id=start style="width:150px;height:30px;font-size:18px;background-color:#0000ff;color:#ffffff;">加密!</button>
 </form>
 
