--- a/user-center/data-move/movein.html
+++ b/user-center/data-move/movein.html
@@ -29,8 +29,8 @@ setTimeout(function(){indata.style.border="1px solid";},2000)
 return false;
 }
 if(importuserdata.checked){
-localStorage.unme=JSON.parse(indata.value).unme;
-localStorage.pwme=JSON.parse(indata.value).pwme;
+localStorage.unme+=JSON.parse(indata.value).unme;
+localStorage.pwme+=JSON.parse(indata.value).pwme;
 outresult.innerHTML+="导入了用户数据<br>"
 }
 outresult.innerHTML+="导入成功!<br>"
