--- a/user-center/data-move/movein.html
+++ b/user-center/data-move/movein.html
@@ -29,9 +29,15 @@ setTimeout(function(){indata.style.border="1px solid";},2000)
 return false;
 }
 if(importuserdata.checked){
+if(JSON.parse(indata.value).unme==undefined||JSON.parse(indata.value).pwme==undefined){
+outresult.innerHTML+="无法导入用户数据,因为没有可用的用户数据<br>"
+} else {
+if(typeof localStorage.unme != "string") localStorage.unme = "";
+if(typeof localStorage.pwme != "string") localStorage.pwme = "";
 localStorage.unme+=JSON.parse(indata.value).unme;
 localStorage.pwme+=JSON.parse(indata.value).pwme;
-outresult.innerHTML+="导入了用户数据<br>"
+outresult.innerHTML+="成功导入了用户数据<br>"
+ }
 }
 outresult.innerHTML+="导入成功!<br>"
 return false;
